k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whatsthecraic
  labels:
    app.kubernetes.io/name: whatsthecraic
    app.kubernetes.io/part-of: whatsthecraic
